--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ flutter:
      - assets/images/bluebanner.png
      - assets/images/news.png
      - assets/images/newscar.png
+     - assets/images/review.png
+     - assets/images/mouse.jpg
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
